--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,9 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  charset: utf8mb4
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
@@ -19,14 +21,14 @@ default: &default
 
 development:
   <<: *default
-  database: market_price_development
+  database: drop_search_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: market_price_test
+  database: drop_search_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +51,6 @@ test:
 #
 production:
   <<: *default
-  database: market_price_production
-  username: market_price
-  password: <%= ENV['MARKET_PRICE_DATABASE_PASSWORD'] %>
+  database: drop_search_production
+  username: drop_search
+  password: <%= ENV['DROP_SEARCH_DATABASE_PASSWORD'] %>
