--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,8 +1,8 @@
 system:
-  title: 'DROP検索'
-  url: 'https://drop-search.herokuapp.com/'
-  bbs_url: 'http://newburu.main.jp/bbs/drop-search/joyful.cgi'
-  description: '必要なアイテムから狩場を決める際の参考に！'
+  title: 'リネージュDROP検索'
+  url: 'https://lineage-drop.herokuapp.com/'
+  bbs_url: 'http://newburu.main.jp/bbs/lineage-drop/joyful.cgi'
+  description: '必要なアイテムを検索して、狩場を決める際の参考に！'
   twitter_site: newburu
   twitter:
     url: 'https://twitter.com/'
