マップエリアの概念を追加

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,7 +1,7 @@
 system:
   title: 'リネージュDROP検索'
   url: 'https://lineage-drop.herokuapp.com/'
-  bbs_url: 'http://newburu.main.jp/bbs/lineage-drop/joyful.cgi'
+  bbs_url: 'http://www.newburu.com/bbs/lineage-drop/joyful.cgi'
   description: '必要なアイテムを検索して、狩場を決める際の参考に！'
   twitter_site: newburu
   twitter:
