--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 coverage
+get_image_data.rake
+rake_get_image_data_list.sh
