公式相場情報へのリンクを追加

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -16,3 +16,8 @@ system:
       size: "52x75"
   send_dm:
     timing: [0,1,3,5,10]
+  link:
+    official:
+      url: 'http://www.ncsoft.jp/lineage/item/search/searchresult'
+      key:
+        item_name: 'query'
