ユーザ設定にて、サーバを設定できるように修正

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -21,3 +21,4 @@ system:
       url: 'http://www.ncsoft.jp/lineage/item/search/searchresult'
       key:
         item_name: 'query'
+        server_id: 'serverId'
